# nacos-skill-client

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  stream.py
api/: __init__.py  compat_routes.py  dependencies.py  main.py  routes.py  schemas.py
config/: default.yaml  example.env
docs/: langchain-agent-design.md
examples/: auto_skill_router.py  usage_example.py
nacos_skill_client/: __init__.py  cache.py  client.py  config.py  exceptions.py  models.py  router.py  utils.py
nacos_skill_client/agent/: __init__.py  cli.py  manager.py
nacos_skill_client/tools/: __init__.py  loader.py
tests/: TEST_AUDIT.md  TEST_CASES.md  TEST_RESULTS.md  conftest.py  test-coverage-plan.md  test-coverage-review.md  test-results-api.txt  test_agent_manager.py  test_agent_routes.py  test_cache.py  test_client.py  test_config.py  test_extract_body.py  test_models.py  test_phase4.py  test_report.md  test_router.py  test_routes.py  test_tools_loader.py  test_utils.py
tests/screenshots/: screenshot-summary.json
web/: index.html  package-lock.json  package.json  proxy-server.js  proxy-server.mjs  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: SkillPanel.tsx  ToolCallItem.tsx
web/src/lib/: sse.ts
web/src/state/: chatReducer.ts
