[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nacos-skill-client"
dynamic = ["version"]
description = "Nacos Skill Registry Python Client — 管理 AI Skills 的客户端库"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "AI Engineer" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.24",
    "ruff>=0.1",
    "mypy>=1.5",
]
all = [
    "nacos-skill-client[dev]",
]

[project.scripts]
nacos-skill = "nacos_skill_client.cli:main"

[tool.hatch.version]
path = "nacos_skill_client/__init__.py"

[tool.ruff]
target-version = "py39"
line-length = 100
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
